crates/rascal/src/snapshots/rascal__tests__all_samples@special_properties.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/special_properties.as
---
initializer:
  actions:
    - ConstantPool:
        - "-- _x --"
        - ""
        - foo
        - _x
        - this
        - foobar
        - "-- _y --"
        - _y
        - "-- _xscale --"
        - _xscale
        - "-- _yscale --"
        - _yscale
        - "-- _currentframe --"
        - _currentframe
        - "-- _totalframes --"
        - _totalframes
        - "-- _alpha --"
        - _alpha
        - "-- _visible --"
        - _visible
        - "-- _width --"
        - _width
        - "-- _height --"
        - _height
        - "-- _rotation --"
        - _rotation
        - "-- _target --"
        - _target
        - value
        - "-- _framesloaded --"
        - _framesloaded
        - "-- _name --"
        - _name
        - "-- _droptarget --"
        - _droptarget
        - "-- _url --"
        - _url
        - "-- _highquality --"
        - _highquality
        - "-- _focusrect --"
        - _focusrect
        - "-- _soundbuftime --"
        - _soundbuftime
        - "-- _quality --"
        - _quality
        - "-- _xmouse --"
        - _xmouse
        - "-- _ymouse --"
        - _ymouse
        - "-- misc --"
    - Push:
        - Constant: 0
    - Trace
    - Push:
        - Constant: 1
        - Integer: 0
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 3
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 3
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 0
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 0
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 0
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 6
    - Trace
    - Push:
        - Constant: 1
        - Integer: 1
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 7
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 7
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 1
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 1
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 1
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 8
    - Trace
    - Push:
        - Constant: 1
        - Integer: 2
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 9
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 9
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 2
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 2
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 2
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 10
    - Trace
    - Push:
        - Constant: 1
        - Integer: 3
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 11
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 11
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 3
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 3
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 3
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 12
    - Trace
    - Push:
        - Constant: 1
        - Integer: 4
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 13
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 13
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 4
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 4
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 4
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 14
    - Trace
    - Push:
        - Constant: 1
        - Integer: 5
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 15
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 15
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 5
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 5
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 5
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 16
    - Trace
    - Push:
        - Constant: 1
        - Integer: 6
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 17
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 17
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 6
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 6
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 6
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 18
    - Trace
    - Push:
        - Constant: 1
        - Integer: 7
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 19
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 19
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 7
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 7
        - "False"
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 7
        - "False"
    - SetProperty
    - Push:
        - Constant: 20
    - Trace
    - Push:
        - Constant: 1
        - Integer: 8
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 21
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 21
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 8
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 8
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 8
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 22
    - Trace
    - Push:
        - Constant: 1
        - Integer: 9
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 23
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 23
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 9
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 9
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 9
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 24
    - Trace
    - Push:
        - Constant: 1
        - Integer: 10
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 25
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 25
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 10
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 10
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 10
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 26
    - Trace
    - Push:
        - Constant: 1
        - Integer: 11
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 27
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 27
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 11
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 11
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 11
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 29
    - Trace
    - Push:
        - Constant: 1
        - Integer: 12
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 30
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 30
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 12
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 12
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 12
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 31
    - Trace
    - Push:
        - Constant: 1
        - Integer: 13
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 32
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 32
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 13
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 13
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 13
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 33
    - Trace
    - Push:
        - Constant: 1
        - Integer: 14
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 34
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 34
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 14
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 14
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 14
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 35
    - Trace
    - Push:
        - Constant: 1
        - Integer: 15
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 36
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 36
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 15
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 15
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 15
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 37
    - Trace
    - Push:
        - Constant: 1
        - Integer: 16
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 38
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 38
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 16
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 16
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 16
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 39
    - Trace
    - Push:
        - Constant: 1
        - Integer: 17
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 40
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 40
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 17
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 17
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 17
        - "True"
    - SetProperty
    - Push:
        - Constant: 41
    - Trace
    - Push:
        - Constant: 1
        - Integer: 18
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 42
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 42
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 18
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 18
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 18
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 43
    - Trace
    - Push:
        - Constant: 1
        - Integer: 19
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 44
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 44
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 19
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 19
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 19
        - Constant: 28
    - SetProperty
    - Push:
        - Constant: 45
    - Trace
    - Push:
        - Constant: 1
        - Integer: 20
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 46
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 46
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 20
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 20
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 20
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 47
    - Trace
    - Push:
        - Constant: 1
        - Integer: 21
    - GetProperty
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 48
    - GetMember
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 48
    - GetMember
    - Trace
    - Push:
        - Constant: 4
    - GetVariable
    - Push:
        - Integer: 21
    - GetProperty
    - Trace
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Integer: 21
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 1
        - Integer: 21
        - Integer: 123
    - SetProperty
    - Push:
        - Constant: 49
    - Trace
    - Push:
        - Constant: 1
        - Integer: 19
    - GetProperty
    - Trace
    - Push:
        - Constant: 1
        - Integer: 6
        - Constant: 1
        - Integer: 6
    - GetProperty
    - Push:
        - Float: 1
    - Add2
    - StoreRegister: 0
    - SetProperty
    - Push:
        - Register: 0
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
