crates/rascal/src/snapshots/rascal__tests__all_samples@switch.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/switch.as
---
initializer:
  actions:
    - ConstantPool:
        - x
        - c
        - 1!
        - 1 or 2!
        - c!
        - c or default!
        - still c or default! no braces!
        - null!
        - "--"
        - only default!
        - end
    - Push:
        - Constant: 0
    - GetVariable
    - StoreRegister: 0
    - Push:
        - Integer: 1
    - StrictEquals
    - If: loc0001
    - Push:
        - Register: 0
        - Integer: 2
    - StrictEquals
    - If: loc0002
    - Push:
        - Register: 0
        - Constant: 1
    - GetVariable
    - StrictEquals
    - If: loc0003
    - Push:
        - Register: 0
        - "Null"
    - StrictEquals
    - If: loc0005
    - Jump: loc0004
    - Push:
        - Constant: 2
    - Trace
    - Push:
        - Constant: 3
    - Trace
    - Jump: loc0000
    - Push:
        - Constant: 4
    - Trace
    - Push:
        - Constant: 5
    - Trace
    - Push:
        - Constant: 6
    - Trace
    - Jump: loc0000
    - Push:
        - Constant: 7
    - Trace
    - Push:
        - Constant: 8
    - Trace
    - Push:
        - Constant: 8
    - Trace
    - Jump: loc0008
    - Push:
        - Constant: 9
    - Trace
    - Push:
        - Constant: 8
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - StoreRegister: 0
    - Push:
        - "True"
    - StrictEquals
    - If: loc000a
    - Jump: loc0009
    - Push:
        - Constant: 10
    - Trace
  label_positions:
    loc0001: 18
    loc0002: 20
    loc0003: 23
    loc0004: 25
    loc0005: 30
    loc0000: 32
    loc0008: 37
    loc0007: 39
    loc000a: 48
    loc0009: 48
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
