crates/rascal/src/snapshots/rascal__tests__all_samples@tell_target.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/tell_target.as
---
initializer:
  actions:
    - ConstantPool:
        - x
        - this is x
        - this is y
        - this is z
        - this is still y
        - this is x again
        - this is root
        - this is still root
    - Push:
        - Constant: 0
    - GetVariable
    - SetTarget2
    - Push:
        - Constant: 1
    - Trace
    - Push:
        - String: ""
        - Integer: 11
    - GetProperty
    - SetTarget: y
    - Push:
        - Constant: 2
    - Trace
    - Push:
        - String: ""
        - Integer: 11
    - GetProperty
    - SetTarget: z
    - Push:
        - Constant: 3
    - Trace
    - SetTarget: ""
    - SetTarget2
    - Push:
        - Constant: 4
    - Trace
    - SetTarget: ""
    - SetTarget2
    - Push:
        - Constant: 5
    - Trace
    - SetTarget: ""
    - Push:
        - Constant: 6
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - SetTarget2
    - SetTarget: ""
    - Push:
        - Constant: 7
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - SetTarget2
    - Push:
        - Constant: 1
    - Trace
    - SetTarget: ""
    - Push:
        - Constant: 7
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
