crates/rascal/src/snapshots/rascal__tests__all_samples@try_catch_stack.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/try_catch_stack.as
---
initializer:
  actions:
    - ConstantPool:
        - bad
        - oh noes!
        - foo
        - "caught: "
        - e
    - Push:
        - Constant: 0
    - DefineFunction:
        name: ""
        params: []
        actions:
          actions:
            - Push:
                - Constant: 1
            - Throw
          label_positions: {}
    - DefineLocal
    - Push:
        - Constant: 2
    - DefineFunction:
        name: ""
        params: []
        actions:
          actions:
            - Try:
                try_body:
                  actions:
                    - Push:
                        - Integer: 1
                        - Integer: 1
                        - Integer: 0
                        - Constant: 0
                    - CallFunction
                    - Add2
                    - Add2
                    - Return
                    - Jump: loc0000
                  label_positions: {}
                catch_body:
                  - Variable: e
                  - actions:
                      - Push:
                          - Constant: 3
                          - Constant: 4
                      - GetVariable
                      - Add2
                      - Trace
                      - Push:
                          - Integer: 5
                      - Return
                    label_positions: {}
                finally_body: ~
          label_positions:
            loc0000: 1
    - DefineLocal
    - Push:
        - Integer: 0
        - Constant: 2
    - CallFunction
    - Trace
    - Push:
        - Integer: 0
        - Constant: 2
    - CallFunction
    - Push:
        - Integer: 0
        - Constant: 2
    - CallFunction
    - Add2
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
